--- a/config.yml
+++ b/config.yml
@@ -12,4 +12,7 @@
 #   https://cran.r-project.org/web/packages/config/vignettes/introduction.html.
 default:
   path:
-    data: "~/data"
+    data: "/Volumes/CAP/data"
+    raw: "rawData"
+    combined: "combinedData"
+  
