--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,27 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+##################
+# Microsoft word #
+##################
+
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
