--- a/.gitignore
+++ b/.gitignore
@@ -73,9 +73,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-##################
-# Microsoft word #
-##################
+####################
+# Microsoft Office #
+####################
 
 *.tmp
 
