add more file locations for csvs

--- a/config.yml
+++ b/config.yml
@@ -17,6 +17,14 @@ default:
     data: "/Volumes/CAP/data"
     raw: "rawData"
     combined: "combinedData"
+  RDMcsvs: 
+    RDM_qualtrics: "RDMallClean_Qualtrics.csv"    
+  AXcsvs:
+    AX_qualtrics: "AXallClean_Qualtrics.csv"
+  EXCLUSIONcsvs:
+    RDM_AX_Qual_Phs1exclusion: "allExclusionsPhase1.csv"
+    RDM_AX_Qual_Phs2exclusion: "allExclusionsPhase2.csv"
+    
 
 # Ari's System User
 metis:
