--- a/config.yml
+++ b/config.yml
@@ -20,6 +20,7 @@ default:
     combined_raw: "/Volumes/CAP/data/rawData/combinedRawData"
     code:
       r_scripts: "./analysis/RDM"
+    documentation: "./documentation"
   code_files:
     setup_data: "RDMsetup.R"
   RDMcsvs: 
@@ -50,6 +51,8 @@ default:
   SUBcsvs:
     phase1_participant: "phase1_participant.csv"
     phase2_participant: "phase2_participant.csv"
+  documentationFiles:
+    state_Quartilescsv: "stateQuartiles.csv"
 
 
 # Ari's System User
