--- a/config.yml
+++ b/config.yml
@@ -80,7 +80,7 @@ metis:
   # inherits: default
 
   # Kim's System User
- kchiew:
-    path:
-      data: "/Volumes/shlab/Projects/CAP/data"
+  #kchiew:
+  # path:
+  #   data: "/Volumes/shlab/Projects/CAP/data"
   # inherits: default
