add PT coding files to config

--- a/config.yml
+++ b/config.yml
@@ -35,6 +35,10 @@ default:
    qualtrics_PCA: "SES_COVQ_PCA.Rmd"
    ax_pca_affect: "add_sesPCA_affectVar_AX.R"
    ax_setup_data: "AXsetup.R"
+  pt_modeling:
+   ptFunction: "prospectTheoryMLE/capPT.R"   
+   ptParallelWrap: "prospectTheoryMLE/PTwrapper.R"
+   ptFitModel: "prospectTheoryMLE/basicPTFitting.Rmd"
   RDMcsvs: 
     RDMbothTasks_qualtrics: "RDMallClean_Qualtrics.csv"
     RDMgain_qualtrics: "RDMallCleanGain_Qualtrics.csv"
